<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:overScrollMode="always"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/rl_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#F8F8F9"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="16dp">

                    <ImageView
                        android:id="@+id/img_avatar"
                        android:layout_width="52dp"
                        android:layout_height="52dp"
                        android:layout_centerVertical="true"
                        android:background="@drawable/ic_avatar"
                        tools:ignore="ContentDescription" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/img_avatar"
                        android:orientation="vertical"
                        android:paddingLeft="20dp">

                        <TextView
                            android:id="@+id/txt_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="4dp"
                            android:text="Hi, 9Payer"
                            android:textColor="#757575" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:id="@+id/layout_sdv"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:orientation="horizontal">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginBottom="2dp"
                                    android:text="Số dư ví:"
                                    android:textColor="#757575" />

                                <ImageView
                                    android:layout_width="18dp"
                                    android:layout_height="18dp"
                                    android:layout_gravity="center_vertical"
                                    android:src="@drawable/ic_app" />

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_weight="1"
                                android:gravity="end"
                                android:orientation="horizontal">

                                <TextView
                                    android:id="@+id/txt_money"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:inputType="textPassword"
                                    android:text="123456"
                                    android:textColor="#FF7643" />

                                <ImageView
                                    android:id="@+id/btn_eyes"
                                    android:layout_width="18dp"
                                    android:layout_height="18dp"
                                    android:layout_gravity="center_vertical"
                                    android:layout_marginLeft="16dp"
                                    app:srcCompat="@drawable/ic_eye_hide" />


                            </LinearLayout>


                        </LinearLayout>


                    </LinearLayout>

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="20dp"
                    android:weightSum="4">

                    <LinearLayout
                        android:id="@+id/ll_quet_ma"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="36dp"
                            android:layout_height="36dp"
                            app:srcCompat="@drawable/ic_thanh_toan" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/quet_ma"
                            android:textColor="@color/colorText" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_nap_tien"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="36dp"
                            android:layout_height="36dp"
                            app:srcCompat="@drawable/ic_nap_tien" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/nap_tien"
                            android:textColor="@color/colorText" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_chuyen_tien"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="36dp"
                            android:layout_height="36dp"
                            app:srcCompat="@drawable/ic_chuyen_tien" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/chuyen_tien"
                            android:textColor="@color/colorText" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_lich_su"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="36dp"
                            android:layout_height="36dp"
                            app:srcCompat="@drawable/ic_nap_tien" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tien_ich"
                            android:textColor="@color/colorText" />

                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="20dp"
                    android:weightSum="4">

                    <LinearLayout
                        android:id="@+id/ll_thanh_toan_hoa_don"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="55dp"
                            android:layout_height="55dp"
                            android:background="@drawable/bg_icon"
                            android:padding="14dp"
                            app:srcCompat="@drawable/ic_flash" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/tt_hoa_don"
                            android:textColor="@color/colorText" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_nap_tien_dt"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="55dp"
                            android:layout_height="55dp"
                            android:background="@drawable/bg_icon"
                            android:padding="14dp"
                            app:srcCompat="@drawable/ic_bill" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/nap_tien_dt"
                            android:textColor="@color/colorText" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_mua_the_game"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="55dp"
                            android:layout_height="55dp"
                            android:background="@drawable/bg_icon"
                            android:padding="14dp"
                            app:srcCompat="@drawable/ic_game" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/mua_the_game"
                            android:textColor="@color/colorText" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_mua_the_dich_vu"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="55dp"
                            android:layout_height="55dp"
                            android:background="@drawable/bg_icon"
                            android:padding="14dp"
                            app:srcCompat="@drawable/ic_gift" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/mua_the_dv"
                            android:textColor="@color/colorText" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="20dp"
                    android:weightSum="4">

                    <LinearLayout
                        android:id="@+id/ll_mua_the_dt"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="55dp"
                            android:layout_height="55dp"
                            android:background="@drawable/bg_icon"
                            android:padding="14dp"
                            app:srcCompat="@drawable/ic_card" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/mua_the_dt"
                            android:textColor="@color/colorText" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_nap_data"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="55dp"
                            android:layout_height="55dp"
                            android:background="@drawable/bg_icon"
                            android:padding="14dp"
                            app:srcCompat="@drawable/ic_bill" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/nap_data"
                            android:textColor="@color/colorText" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="20dp"
                    android:orientation="vertical"
                    android:gravity="center">


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="20dp"
                    android:orientation="vertical"
                    android:gravity="center">

                    <EditText
                        android:id="@+id/edt_url_paygate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="url..."
                        android:imeOptions="actionDone"
                        android:textColor="@color/black"
                        android:maxLines="1"
                        android:overScrollMode="always"
                        android:scrollbarStyle="insideInset"
                        android:scrollbars="vertical"
                        android:backgroundTint="@android:color/holo_red_light"
                        android:singleLine="true" />

                    <Button
                        android:layout_width="wrap_content"
                        android:id="@+id/btn_thanh_toan"
                        android:layout_height="wrap_content"
                        android:text="Thanh toán từ cổng" />

                </LinearLayout>


            </LinearLayout>

        </ScrollView>

        <LinearLayout
            android:id="@+id/layout_web_gate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@android:color/white">

                <View
                    android:id="@+id/btnClose"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:background="@drawable/ic_close"
                    android:padding="0dp"
                    android:textAlignment="textStart"
                    android:textColor="#FFFFFF" />
            </androidx.appcompat.widget.Toolbar>

            <WebView
                android:id="@+id/webView_gate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="visible" />
        </LinearLayout>


    </RelativeLayout>

</RelativeLayout>